# Ecofunding-Solana

./: README.md
backend/: .gitignore  Anchor.toml
backend/donation_tracker/: Cargo.toml  data.json
backend/donation_tracker/src/: main.rs
backend/programs/backend/: Cargo.toml
backend/programs/backend/src/: README.md  lib.rs
backend/wallets-desarrollo/: wallet1.json  wallet2.json
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.html  stores.ts
frontend/src/lib/: Cards.svelte  Drift.svelte  Features.svelte  Footer.svelte  Hero.svelte  Navbar.svelte  ReadStoreExample.svelte  SignIn.svelte  StartACrowfund.svelte  StartTransaction.svelte  index.ts  walletConnect.svelte
frontend/src/lib/images/: tabliss (1).json  tabliss.json
frontend/src/lib/services/: drift.client.ts  drift.operation.ts  solanaService.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/api/drift/: +server.ts
frontend/src/routes/login/: +page.svelte
frontend/src/routes/project/: +page.svelte
frontend/src/routes/set_four/: +page.svelte
frontend/src/routes/set_one/: +page.svelte
frontend/src/routes/set_three/: +page.svelte
frontend/src/routes/set_two/: +page.svelte
frontend/src/routes/t/: +page.svelte
wallets/wallets/: drift.json
